// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVault - redeem osToken calculates redeem correctly 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 120633,
}
`;

exports[`EthVault - redeem osToken can redeem 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 123288,
}
`;
